@@ -1,3 +1,8 @@
+2005-01-06  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
+
+	* index.php: 
+	Removed banner against software patents.
+
 2004-12-27  Mikhael Goikhman  <migo@homemail.com>
 
 	* documentation/manpages/manpages2php:
